--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginForm"
         tools:targetApi="31">
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
         <activity
             android:name=".ModelView.HomePage"
             android:exported="false" />
@@ -30,16 +44,25 @@
             android:name=".ui.authentication.SignUpActivity"
             android:exported="false" />
         <activity
+            android:name=".ui.add_edit_product.AddEditProductActivity"
+            android:exported="false" />
+        <activity
             android:name="com.example.finalspicyfood.mui.orderdetails.OrderdetailsActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.homepage.HomePageActivity"
+            android:name=".ui.homepage.AdminHomePageActivity"
             android:exported="false" />
         <activity
             android:name=".ModelView.MainActivity"
             android:exported="true" />
         <activity
+            android:name=".ui.productdetails.AdminProductDetails"
+            android:exported="true" />
+        <activity
             android:name=".ui.productdetails.ProductDetails"
+            android:exported="true" />
+        <activity
+            android:name=".ui.homepage.HomePageActivity"
             android:exported="true" />
     </application>
 
